--- a/two_and_five_inventory_manager/requirements.txt
+++ b/two_and_five_inventory_manager/requirements.txt
@@ -7,6 +7,7 @@ filelock==3.15.4
 gunicorn==23.0.0
 packaging==24.1
 platformdirs==4.2.2
+python-dotenv==1.0.0
 sqlparse==0.5.1
 tzdata==2024.1
 virtualenv==20.26.3
